--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 .App {
   text-align: center;
+  background-color: rgb(46, 52, 52);
+  width: 100%;
 }
+
 
 .App-logo {
   height: 40vmin;
@@ -11,6 +14,34 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 200px;
+  height: 180px;
+  background-color: rgb(114, 117, 114);
+}
+
+.btn {
+  font-size: 20px;
+  margin: 10px;
+  width: 150px;
+  color: aliceblue;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.titulo {
+  color: white;
+}
+
+
+.container {
+  padding: 2px 16px;
 }
 
 .App-header {
@@ -32,6 +63,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
