--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,11 @@
   color: aliceblue;
 }
 
+.titulo {
+  background-color: rgb(0, 0, 0);
+  height: 65px;
+}
+
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
