--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.grid {
+  display: grid;
+  gap: 5rem;
+  grid-template-rows: 8rem;
+  grid-template-columns: repeat(auto-fill, minmax(min(100%, 8rem), 1fr));
+  padding: 5%;
+}
