--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: rgb(46, 52, 52);
-  width: 100%;
+  height: 100vh;
 }
 
 
@@ -43,6 +43,22 @@
 .titulo {
   color: white;
 }
+
+.buscarP {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  right: 33%;
+  top: 70px;
+  margin-top: 10px;
+}
+
+.inputP {
+  width: 500px;
+  background-color: rgba(228, 220, 220, 0.67);
+}
+
 
 
 .container {
