--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background-color: rgb(46, 52, 52);
-  height: 100vh;
+  height: 110vh;
 }
 
 
@@ -26,7 +26,7 @@
 
 .btn {
   font-size: 20px;
-  margin: 10px;
+  margin: 5px;
   width: 150px;
   color: aliceblue;
 }
@@ -50,7 +50,7 @@
   align-items: center;
   position: absolute;
   right: 33%;
-  top: 70px;
+  top: 120px;
   margin-top: 10px;
 }
 
@@ -80,6 +80,44 @@
   color: #61dafb;
 }
 
+.topnav {
+  background-color: rgba(122, 90, 128, 0.561);
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add an active class to highlight the current page */
+.topnav a.active {
+  background-color: #b8f7e0;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+  display: none;
+}
+
+.containerpok {
+  margin-left: 450px;
+  margin-top: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -88,4 +126,12 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.poke-card {
+  width: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
 }
