--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,10 @@
   font-size: 20px;
   margin: 5px;
   width: 150px;
-  color: aliceblue;
+  color: rgb(16, 221, 169);
 }
+
+
 
 .titulo {
   background-color: rgb(0, 0, 0);
